package com.cabinet_dentaire.m_parametrage.Dto;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter

public class DentDto {
    private Long id;
    private String position;
    private String code;
}
